[project]
name = "container-orchestrator"
version = "0.2.0"
description = "Container lifecycle management node for Tagentacle — create, stop, exec via Podman/Docker"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
]

[project.optional-dependencies]
podman = ["podman>=4.0.0,<5.0.0"]
docker = ["docker>=7.0.0"]

[tool.uv.sources]
tagentacle-py-core = { path = "../tagentacle-py-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
